# coding: utf-8
[metadata]
name = blinkenxmas
version = 0.1
description = Controls blinky lights on my Christmas tree!
long_description = file: README.rst
author = Dave Jones
author_email = dave@waveform.org.uk
keywords = christmas tree pico neopixels ws2812
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.7
install_requires =
    paho-mqtt
    chameleon
    numpy
    colorzero
    mpremote
    pillow
    pyserial
    docutils
    importlib_resources~=1.3;python_version<'3.9'
    importlib_metadata~=1.4;python_version<'3.8'

[options.package_data]
blinkenxmas =
    *.conf
    *.html
    *.css
    *.js
    *.pt
    *.png
    *.jpg
    *.svg

[options.extras_require]
test =
    pytest
    pytest-cov
doc =
    sphinx
    sphinx-rtd-theme
pi =
    picamera

[options.entry_points]
console_scripts =
    bxweb = blinkenxmas.web:main
    bxcli = blinkenxmas.cli:main
    bxflash = blinkenxmas.flash:main

[tool:pytest]
addopts = -rsx --cov --tb=short
testpaths = tests

[coverage:run]
source = blinkenxmas
branch = true

[coverage:report]
show_missing = true
exclude_lines =
    raise NotImplementedError
    assert False

[copyrights:settings]
include =
    **/*.py
    **/*.rst
exclude =
    docs/examples/*.py
    docs/license.rst
license = LICENSE.txt
preamble =
    blinkenxmas: Controls blinky lights on my Christmas tree!
strip-preamble = false
